			     BZFlag Release Notes
			     ====================

BZFlag 2.1.0
------------

* Fix wrong kick if pausing having V and moving - Julio Jimenez
* Prevent bzfs denial-of-service infinite loop - Sean Morrison
* Minimize attempts to crash servers with malformed messages - Sean Morrison
* Do not inform hunters of stealthy prey - Ian Agar
* Bots share connection with main player - Alfredo Tupone
* Player List command works at least to show his own status - Thomas Stauer
* Bug fixed on countdown virtual capture - Alfredo Tupone
* Removing applauds when capturing its own flag - Alfredo Tupone
* End shot is sent by server on behalf of player - Alfredo Tupone
* GM update is checked for being applicable - Alfredo Tupone
* Shot attribute added from server / receiver - Alfredo Tupone
* Handicap computed server side - Alfredo Tupone
* Shot message are synchronized with position - Alfredo Tupone
* Fixes for Bot on public server - Alfredo Tupone
* All scores are controlled completely by the server - Daniel Remenak
* bzadmin require less network bandwidth - Alfredo Tupone
* Inertia setting are bzdb vars now - Alfredo Tupone

BZFlag 2.0.5
------------

* Fixed issue with denial-of-service message attacks - Sean Morrison
* Fixes for Bot on public server - Alfredo Tupone
* Support for -window on Mac command line executions - Sean Morrison
* Show slot numbers in lagstats (if admin) - Mark Thomas, Mike Weisenborn
* FPS limit energy saver option for laptops - Karsten Behrmann, Sean Morrison
* Send admin channel warning if /password fails - Garrett Padera, Jeff Myers
* Known players not authenticated are detected - Tupone Alfredo
* Added /checkip command - Frank Thilo
* "Enable Local Shot/Spawn Effects" affects "Driving with" - Daniel Remenak
* Show shot reload indicators when driving with a tank - Daniel Remenak
* Fix misc/bzfquery.pl to handle MsgGameTime - Tegan, Mark Thomas
* Simple server list searching - Daniel Remenak

BZFlag 2.0.4  "Shiny" (2005-09-30)