@@ -352,6 +352,14 @@ public:
 			   GameKeeper::Player *playerData);
 };
 
+class ModCountCommand : ServerCommand {
+public:
+  ModCountCommand();
+
+  virtual bool operator() (const char	 *commandLine,
+			   GameKeeper::Player *playerData);
+};
+
 class ClientQueryCommand : ServerCommand {
 public:
   ClientQueryCommand();
@@ -460,6 +468,7 @@ static ViewReportCommand  viewReportCommand;
 static ClientQueryCommand clientQueryCommand;
 static DateCommand	  dateCommand;
 static TimeCommand	  timeCommand;
+static ModCountCommand	  modCountCommand;
 static RecordCommand      recordCommand;
 static ReplayCommand      replayCommand;
 static SayCommand	  sayCommand;
@@ -553,6 +562,8 @@ ReplayCommand::ReplayCommand()		 : ServerCommand("/replay",
   "[list|load|play|skip +-seconds] - intereact with recorded files") {}
 SayCommand::SayCommand()		 : ServerCommand("/say",
   "[message] - generate a public message sent by the server") {}
+ModCountCommand::ModCountCommand()		 : ServerCommand("/modcount",
+  "[+-seconds] - adjust countdown (if any)") {}
 DateCommand::DateCommand()		 : DateTimeCommand("/date") {}
 TimeCommand::TimeCommand()		 : DateTimeCommand("/time") {}
 
@@ -3099,7 +3110,51 @@ bool SayCommand::operator() (const char	 *message,
   return true;
 }
 
+bool ModCountCommand::operator() (const char	*message,
+				  GameKeeper::Player *playerData)
+{
+  size_t messageStart = 0;
+  int t = playerData->getIndex();
 
+  if (!playerData->accessInfo.hasPerm(PlayerAccessInfo::modCount)) {
+    char reply[MessageLen] = {0};
+    snprintf(reply, MessageLen, "You do not have permission to run the /modcount command");
+    sendMessage(ServerPlayer, t, reply);
+    return true;
+  }
+	
+	std::string messageText = &message[9];
+
+  // skip any leading whitespace
+  while ((messageStart < messageText.size()) &&
+	 (isspace(messageText[messageStart]))) {
+    messageStart++;
+  }
+
+  if (messageStart == messageText.size()) {
+    sendMessage(ServerPlayer, t, "Usage: /modcount {+|-} SECONDS");
+    return true;
+  }
+	if (!countdownActive && countdownDelay <= 0) {
+		char reply[MessageLen] = {0};
+    snprintf(reply, MessageLen, "%s, there is no current countdown in progress", playerData->player.getCallSign());
+    sendMessage(ServerPlayer, t, reply);
+    return true;
+  }
+  
+  messageText.erase(0, --messageStart);
+  clOptions->addedTime += atof((messageText.c_str())); //remember to add the time
+  
+	if (countdownDelay > 0) { //we are currently counting down to start
+		char reply[MessageLen] = {0};
+    snprintf(reply, MessageLen, "%s, the countdown will be adjusted by %f when the match starts",
+						 playerData->player.getCallSign(), clOptions->addedTime);
+    sendMessage(ServerPlayer, t, reply);
+    return true;
+  }
+  
+  return true;
+}
 
 bool DateTimeCommand::operator() (const char	 *,
 				  GameKeeper::Player *playerData)
